[package]
name = "dissect-gen-classic"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.9.8"
num-traits = "0.2.14"
num-bigint = {version = "0.4.3", features = ["rand"]}
num-integer = "0.1.44"
rand = "0.7.0"
sha2 = "0.9.8"
digest = "0.9"
rand_chacha = "0.3.1"
