[package]
name = "dissect-gen-X962"
version = "0.1.0"
edition = "2018"

[dependencies]
cc = "1.0.72"
sha-1 = "0.9.8"
num-bigint = {version = "0.4.3", features = ["rand"]}
num-traits = "0.2.14"
num-integer = "0.1.44"
rand = "0.8.0"
sha2 = "0.9.8"
digest = "0.9"
clap = "2.34.0"

[build-dependencies]
cc = "*"